Fixing align items and putting the correct value

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -447,7 +447,7 @@ input[name='q']::placeholder {
 @media (max-width:998px) {
     .footer-content {
         flex-direction: column;
-        align-items: left;
+        align-items: flex-start;
     }
 
     .footer-item {
